# MChat

./: main.py  pyproject.toml
backend/: .env  db.sqlite3
backend/backend/: asgi.py  settings.py  urls.py
backend/chat/: consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_initial.py  0003_room_hash.py  0004_alter_room_type.py  0005_alter_room_type.py
backend/user/: auth.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/user/migrations/: 0001_initial.py
backend/user/templates/: authCode.html
frontend/: .env.production  index.html  package-lock.json  package.json  server.js  vite.config.js
frontend/src/: Theme.jsx  config.js  entry-client.jsx  entry-server.jsx  routes.jsx
frontend/src/api/: axiosInstance.js  requests.js
frontend/src/assets/: icons.jsx
frontend/src/components/: Elements.jsx
frontend/src/components/base/: Base.css
frontend/src/components/elements/: Button.css  Bytton.jsx  Input.css  Input.jsx  Section.css  Section.jsx  Title.jsx
frontend/src/layouts/: ChatLayout.css  ChatLayout.jsx  DesktopLayout.css  DesktopLayout.jsx
frontend/src/pages/: About.jsx  Auth.css  Auth.jsx  Chat.css  Chat.jsx  Home.css  Home.jsx  NotFound.jsx
frontend/src/providers/: AppProvider.jsx  AuthContext.jsx  MessageProvider.jsx  ProtectedRoute.jsx  authService.js
